--- a/app/src/main/res/values-b+fr/strings.xml
+++ b/app/src/main/res/values-b+fr/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">TP1</string>
-    <string name="title_activity_form">Form</string>
+    <string name="title_activity_form">Formulaire</string>
     <string name="title_activity_hello_world">HelloWorld</string>
     <string name="helloworld_activity">HelloWorld Activity</string>
     <string name="form_activity">Form Activity</string>
     <string name="hello_world">Hello World !</string>
-    <string name="first_name">First Name</string>
-    <string name="last_name">Last Name</string>
-    <string name="area_of_expertise">Area of Expertise</string>
-    <string name="save">Save</string>
-    <string name="phone_number">Phone Number</string>
+    <string name="first_name">Prénom</string>
+    <string name="last_name">Nom</string>
+    <string name="area_of_expertise">Domaine d\'Expertise</string>
+    <string name="save">Enregistrer</string>
+    <string name="phone_number">Numéro de téléphone</string>
     <string name="age">Age</string>
 </resources>
