--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -26,4 +26,14 @@
     <string name="phone_number_result">Numéro de téléphone = </string>
     <string name="back">Retour</string>
     <string name="next">Suivant</string>
+    <string name="title_activity_phone">Phone</string>
+    <string name="androidphone">androidPhone</string>
+    <string name="textViewPhoneNumber2">TextView</string>
+    <string name="call">Call</string>
+    <string name="title_activity_train">Train</string>
+    <string name="train_activity">Train Activity</string>
+    <string name="show_schedules">Afficher les horaires</string>
+    <string name="end">Arrivée :</string>
+    <string name="start">Départ :</string>
+    <string name="title_activity_train_result">TrainResult</string>
 </resources>
